admin new update

--- a/user/templates/index__1.html
+++ b/user/templates/index__1.html
@@ -433,20 +433,20 @@
             Alternate Medicines
           </div>
           <div class="card-body">
-            <table class="table" style="line-height: 3">
+            <table class="table text-center" style="line-height: 3">
               <tbody>
                 {% for h in alter%}
                 <tr>
-                  <th>
+                  <th >
                     <p class="card-text">{{h}}</p>
                   </th>
-                  <td>
+                  <!-- <td>
                     <div class="d-grid gap-2 mt-1">
                       <button class="btn btn-primary" type="button">
                         Add to Cart
                       </button>
                     </div>
-                  </td>
+                  </td> -->
                 </tr>
                 {%endfor%}
               </tbody>
