--- a/user/static/css/pastOrders.css
+++ b/user/static/css/pastOrders.css
@@ -72,7 +72,7 @@ input:focus {
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .modal-content {
@@ -162,7 +162,7 @@ input:focus {
 }
 
 .col .card {
-  width: 250px;
+  width: 100%;
   height: 350px;
   padding: 10px;
   border: 0.5px solid black;
