--- a/user/templates/pastOrders.html
+++ b/user/templates/pastOrders.html
@@ -156,7 +156,7 @@
         <h2 class="list-title">Current Order</h2>
       </div>
       <div class="col-md-6">
-        <a href="#"><button class="btn float-end me-3">Details</button></a>
+        <a href="{% url 'shipmentstatus' ORDERID=i %}"><button class="btn float-end me-3">Details</button></a>
       </div>
     </div>
     
