--- a/administrator/templates/adminDashboard (1).html
+++ b/administrator/templates/adminDashboard (1).html
@@ -34,12 +34,20 @@
     }
    .container{
      margin-left: 12%;
+     margin-top: 140px;
    }
    .row{
      margin-left: 4%;
    }
    .card:hover{
      transform: scale(1.1);
+   }
+   a{
+     text-decoration: none;
+   }
+   footer{
+     bottom: 0;
+     margin-top: 160px;
    }
   </style>
   <body>
@@ -158,7 +166,7 @@
     <!--------GRAPH-------->
 	
 	
- <div class="row">
+ <!-- <div class="row">
   
   <div class="col pb-5">
   <div class="card ms-5 p-3" style="width: 37rem; border-width:2px; border-color: cyan;">
@@ -176,7 +184,7 @@
    </div>
   </div>
    </div>
-   </div>
+   </div> -->
    
    
     <!--------FOOTERRR--------->
