--- a/prescription/templates/invoice.html
+++ b/prescription/templates/invoice.html
@@ -76,11 +76,8 @@
   <br>
     <table style="border: 1px solid black; padding: 10px; font-size: 15px">
       <tr>
-        <td rowspan="2"> <b>Sold by:</b> <br> gibberish pffftttt <br> imma already done <br> *sighssssssss*</td>
-        <td>Patient details <br> Address <br> Contact</td>
-      </tr>
-      <tr>
-        <td>Doctor Name and address</td>
+        <td> <b>Sold by:</b> <br> <b> Medistop </b></td>
+        <td>Patient details <br> Name: {{name}} <br> Address: {{address}} <br> Contact: {{contact}}</td>
       </tr>
   </table>
 
