--- a/prescription/templates/upload-prescription.html
+++ b/prescription/templates/upload-prescription.html
@@ -8397,7 +8397,12 @@ position: absolute;
   <div style="display: none; visibility: hidden;">
     <script>var btn = document.getElementsByClassName("afb-download-button").length; if (btn != 0 && !("Others".indexOf("Listing Page") > 0 && "Others" == "Consultation")) AF("banners", "hideBanner");</script>
   </div>
-
+  <script SameSite="None; Secure" src="https://static.landbot.io/landbot-3/landbot-3.0.0.js"></script>
+  <script>
+    var myLandbot = new Landbot.Livechat({
+      configUrl: 'https://chats.landbot.io/v3/H-1003384-6BWQ4MFW449MGMIK/index.json',
+    });
+  </script>
 </body>
 
 </html>
