--- a/user/templates/shipmenttracker.html
+++ b/user/templates/shipmenttracker.html
@@ -315,6 +315,12 @@
       <a class="text-reset fw-bold text-decoration-none" href="#">MediStop.com</a>
     </div>
   </footer>
+  <script SameSite="None; Secure" src="https://static.landbot.io/landbot-3/landbot-3.0.0.js"></script>
+  <script>
+    var myLandbot = new Landbot.Livechat({
+      configUrl: 'https://chats.landbot.io/v3/H-1003384-6BWQ4MFW449MGMIK/index.json',
+    });
+  </script>
 </body>
 
 </html>
