--- a/prescription/templates/cart_____1.html
+++ b/prescription/templates/cart_____1.html
@@ -482,6 +482,12 @@
       });
     }
   </script>
+  <script SameSite="None; Secure" src="https://static.landbot.io/landbot-3/landbot-3.0.0.js"></script>
+  <script>
+    var myLandbot = new Landbot.Livechat({
+      configUrl: 'https://chats.landbot.io/v3/H-1003384-6BWQ4MFW449MGMIK/index.json',
+    });
+  </script>
 </body>
 
 </html>
