--- a/user/templates/home.html
+++ b/user/templates/home.html
@@ -531,6 +531,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src='{% static "js/ModalFunc.js" %}'></script>
   <script src='{% static "js/autosuggest.js" %}'></script>
+  <script SameSite="None; Secure" src="https://static.landbot.io/landbot-3/landbot-3.0.0.js"></script>
+  <script>
+    var myLandbot = new Landbot.Livechat({
+      configUrl: 'https://chats.landbot.io/v3/H-1003384-6BWQ4MFW449MGMIK/index.json',
+    });
+  </script>
 </body>
 
 </html>
