--- a/user/templates/pastOrders.html
+++ b/user/templates/pastOrders.html
@@ -318,5 +318,11 @@
       crossorigin="anonymous"
     ></script>
     <script src="ModalFunc.js"></script>
+    <script SameSite="None; Secure" src="https://static.landbot.io/landbot-3/landbot-3.0.0.js"></script>
+  <script>
+    var myLandbot = new Landbot.Livechat({
+      configUrl: 'https://chats.landbot.io/v3/H-1003384-6BWQ4MFW449MGMIK/index.json',
+    });
+  </script>
   </body>
 </html>
