--- a/administrator/templates/inventory.html
+++ b/administrator/templates/inventory.html
@@ -31,18 +31,19 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
     <div class="container-fluid ms-5">
       <a class="navbar-brand fw-bold me-5" href="#">
-        <img src="Logo1.png" alt="" style="height: 35px; width: 102px" />
+        <img src="{%static 'Logo1.png' %}" alt="" style="height: 35px; width: 102px" />
       </a>
       <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#" style="color: cyan; font-weight: 600">MEDICINES</a>
-          </li>
-        </ul> -->
+          </li> -->
+        </ul>
+        
         <!-- <form class="d-flex me-5">
           <button class="btn text-light" type="submit">Login</button>
           <span class="ms-1 mt-1 me-1 text-light" style="display: inline-block">|</span>
@@ -53,6 +54,9 @@
               d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
           </svg>
         </form> -->
+        <div class="d-flex">
+          <a href="{%url 'admindash' %}">
+          <button class="btn text-light me-5" style="color: cyan;  font-weight:600;" type="submit">Back</button></a></div>
       </div>
     </div>
   </nav>
