--- a/administrator/templates/QRCode.html
+++ b/administrator/templates/QRCode.html
@@ -94,15 +94,15 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
     <div class="container-fluid ms-5">
       <a class="navbar-brand fw-bold me-5" href="#">
-        <img src="Logo1.png" alt="" style="height: 35px; width: 102px" />
+        <img src="{%static 'Logo1.png' %}" alt="" style="height: 35px; width: 102px" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <!-- <li class="nav-item">
                 <a
                   class="nav-link active"
                   aria-current="page"
@@ -125,11 +125,13 @@
                 <a class="nav-link" href="#" style="font-weight: 600"
                   >LAB TESTS</a
                 >
-              </li>
-            </ul> -->
-        <!-- <form class="d-flex me-5">
-              <button class="btn text-light" type="submit">Login</button>
-              <span
+              </li> -->
+            </ul>
+        <!-- <form class="d-flex me-5"> -->
+          <div class="d-flex">
+          <a href="{%url 'admindash' %}">
+          <button class="btn text-light me-5" style="color: cyan;  font-weight:600;" type="submit">Back</button></a></div>
+              <!-- <span
                 class="ms-1 mt-1 me-1 text-light"
                 style="display: inline-block"
                 >|</span
