--- a/user/templates/index__1.html
+++ b/user/templates/index__1.html
@@ -10,6 +10,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href='{%static "css/Home.css" %}'>
   <title>Product</title>
   <style>
     .navbar-nav .nav-item:hover .nav-link {
@@ -101,7 +102,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
     <div class="container-fluid ms-5">
       <a class="navbar-brand fw-bold me-5" href="#">
-        <img src="{%static " images/Logo1.png"%}" alt="" style="height: 35px; width: 102px" />
+        <img src="{%static 'image/Logo1.png' %}" alt="" style="height: 35px; width: 102px" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -122,9 +123,12 @@
           </form>
         </ul>
         <div class="d-flex me-5">
+          <a href="{%url 'upload'%}">
           <button class="btn" style="background-color: black; color: cyan; font-weight: 600">
             Upload
           </button>
+        </a>
+        {%if not request.session.loggedin%}
           <button class="btn text-light" type="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Login
           </button>
@@ -143,7 +147,8 @@
                     <div class="col-md-6" id="col-login">
                       <div class="card-body">
                         <h1 class="card-title">Login</h1>
-                        <form action="#" id="loginform">
+                        <form action="{%url 'login'%}" id="loginform">
+                          {% csrf_token %}
                           <div class="form-floating mb-3">
                             <input type="email" class="form-control shadow-none" id="LfloatingInput"
                               placeholder="name@example.com" required />
@@ -187,13 +192,15 @@
                   <div class="row g-0">
                     <div class="col-md-6">
                       <div class="leftdiv">
-                        <img src="{%static " svg/Signup-01.svg"%}" class="img-fluid rounded-start" alt="..." />
+                        <img src="{%static 'svg/Signup-01.svg' %}" class="img-fluid rounded-start" alt="..." />
                       </div>
                     </div>
                     <div class="col-md-6" id="col-login">
                       <div class="card-body">
                         <h1 class="card-title">Signup</h1>
-                        <form action="#" id="loginform">
+                        
+                        <form action="{%url 'signup'%}" id="loginform">
+                          {% csrf_token %}
                           <div class="first" id="1">
                             <div class="form-floating mb-3">
                               <input type="text" class="form-control shadow-none" id="floatingInputName"
@@ -270,12 +277,15 @@
                   </div>
                 </div>
               </div>
+              {%else%}
+          <a href="{%url 'logout'%}"><button class="btn text-light" type="submit">Logout</button></a>
+          {%endif%}
             </div>
           </div>
           <!-- ---------- -->
           <a href="{%url 'cart'%}">
           <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-            class="bi bi-cart2 mt-1 ms-3" viewBox="0 0 16 16" style="color: white">
+            class="bi bi-cart2 mt-1 me-5" viewBox="0 0 16 16" style="color: white">
             <path
               d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
           </svg>
