--- a/user/templates/pastOrders.html
+++ b/user/templates/pastOrders.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
       <div class="container-fluid ms-5">
         <a class="navbar-brand fw-bold me-5" href="#">
-          <img src="Logo1.png" alt="" style="height: 35px; width: 102px" />
+          <img src='{%static "image/Logo1.png"%}' alt="" style="height: 35px; width: 102px" />
         </a>
         <button
           class="navbar-toggler"
