--- a/administrator/templates/AdminVeri.html
+++ b/administrator/templates/AdminVeri.html
@@ -103,7 +103,7 @@
                   <td>{{name}}</td>
                   <td>{{orderid}}</td>
                   <td>{{phone}}</td>
-                  <td><a href="{{plink}}"><button class="btn " style="
+                  <td><a href="https://firebasestorage.googleapis.com/v0/b/medistop-c7db0.appspot.com/o/Prescription%2Fomnb6nS0VXgzTATbdUKR2sFgW2v1?alt=media&token=a42bed2f-c656-40f8-92f4-433249ce7582"><button class="btn " style="
                         background-color: black;
                         color: white;
                         font-weight: 600;
