--- a/prescription/templates/upload-prescription.html
+++ b/prescription/templates/upload-prescription.html
@@ -8221,10 +8221,10 @@ position: absolute;
   <!--------NAVBAR STARTS--------->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
     <div class="container-fluid ms-5">
-      <a class="navbar-brand fw-bold me-5" href="#">
-        <img src="Logo1.png" alt="" style="height: 35px; width: 102px" />
+      <a class="navbar-brand fw-bold me-5" href="{%url 'homepage'%}">
+        <img src="{%static 'image/Logo1.png'%}" alt="" style="height: 35px; width: 102px" />
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -8244,7 +8244,7 @@ position: absolute;
             <path
               d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
           </svg>
-        </form>
+        </form> -->
       </div>
     </div>
   </nav>
