--- a/user/templates/home.html
+++ b/user/templates/home.html
@@ -107,6 +107,17 @@
             </form>
         </ul>
         <div class="d-flex me-5">
+          <a href="{%url 'orderhistory'%}">
+            <button
+              class="btn me-3"
+              data-bs-toggle="tooltip"
+              data-bs-placement="bottom"
+              title="Past Orders"
+              style="background-color: black; color: cyan; font-weight: 600"
+            >
+              Past Orders
+            </button>
+          </a>
           <a href="{%url 'upload'%}">
             <button class="btn" style="background-color: black; color: cyan; font-weight: 600">
               Upload
