--- a/prescription/templates/info.html
+++ b/prescription/templates/info.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -39,7 +40,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
       <div class="container-fluid ms-5">
         <a class="navbar-brand fw-bold me-5" href="#">
-          <img src="Logo1.png" alt="" style="height: 35px; width: 102px" />
+          <img src="{%static 'image/Logo1.png' %}" alt="" style="height: 35px; width: 102px" />
         </a>
         <button
           class="navbar-toggler"
@@ -76,7 +77,7 @@
         <div class="col-6">
           <div class="row" style="padding: 120px 0">
             <div class="text-center">
-              <img src="786.gif" alt="" />
+              <img src="{% static 'image/786.gif'%}" alt="" />
               <!-- <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="50"
@@ -98,7 +99,7 @@
                 order is confirmed.
               </p>
               <a
-                href="#"
+                href="{%url 'homepage'%}"
                 class="fs-2 text-center"
                 style="color: #015ee9; text-decoration: none"
                 >HOME</a
