--- a/prescription/templates/invoice.html
+++ b/prescription/templates/invoice.html
@@ -5,6 +5,10 @@
     <title> </title>
     <style>
       @page {
+        background-image: url('https://firebasestorage.googleapis.com/v0/b/medistop-c7db0.appspot.com/o/pdf-01.png?alt=media&token=ddf709dd-7517-47b3-b525-41942804722f');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
         size: a4 portrait;
         @frame header_frame {
           /* Static Frame */
@@ -33,6 +37,7 @@
 
       body{
         font-family: "Courier";
+        
       }
 
       table { -pdf-keep-with-next: true; }
@@ -59,27 +64,30 @@
       
     </style>
   </head>
-  <body>
+  <body style="background-image: url('https://firebasestorage.googleapis.com/v0/b/medistop-c7db0.appspot.com/o/mail2-01.png?alt=media&token=d2bb0b52-081e-452d-b84d-804a625645f7');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;">
     <div id="header_content">
-    
       <table border="none">
       <tr style="font-size:17px">
         <th style="text-align:left">Tax Invoice/Bill of Supply/Cash Memo</th>
-        <th style="text-align:left; padding-left: 50px">Invoice No. : <br> Date : <br> Order Id: </th>
+        <th style="text-align:left; padding-left: 50px">Invoice No. : <br> Date : <br> Order Id: {{oid}} </th>
       </tr>
       </table>
     </div>
 
-
-  <br>
-  <br>
-  <br>
+      <br> Date : 25_09_2021 <br> Order Id: {{oid}}
     <table style="border: 1px solid black; padding: 10px; font-size: 15px">
       <tr>
-        <td> <b>Sold by:</b> <br> <b> Medistop </b></td>
+        <td rowspan="2"> <b><img src="{{path}}" style="width:200px; height:200px;"></img> </td>
         <td>Patient details <br> Name: {{name}} <br> Address: {{address}} <br> Contact: {{contact}}</td>
       </tr>
+      <tr>
+        <td><b>Sold by:</b> <br> MediStop <br></td>
+      </tr>
   </table>
+
 
   <br>
   <br>
@@ -90,30 +98,27 @@
         <tr style="font-size: 15px">
           <th width="50px">Sr No.</th>
           <th>Product Name</th>
-          <th>Mfr Name</th>
           <th width="50px">Qty</th>
           <th>Pack Size</th>
           <th width="60px">MRP</th>
-          <th width="70px">Total Amount</th>
         </tr>
+        {%for medi, price, qty, sell_type in data%}
         <tr style="font-size: 15px">
           <td>1</td>
-          <td>Trigaine Solution</td>
-          <td>Apple Therapeutics Ltd</td>
-          <td>3</td>
-          <td>60 ml</td>
-          <td>Rs 362</td>
-          <td>Rs 1086</td>
+          <td>{{medi}}</td>
+          <td>{{qty}}</td>
+          <td> {{sell_type}}</td>
+          <td>Rs {{price}}</td>
         </tr>
+        {%endfor%}
       </table>
       <br />
 
       
 
-      <p style="float:right; border: 2px solid black; padding:20px; padding-top:30px"> Total Cost : Rs</span></p>
+      <p style="float:right; border: 2px solid black; padding:20px; padding-top:30px"> Total Cost :Rs. {{total}}</span></p>
     </div>
-    
-    <div id="footer_content" style="font-size: 15px; text-align:right"><img src="C:/Users/adapp/Downloads/Medistop.jpeg" style="height: 100px; width: 175px"/>
     </div>
+
   </body>
 </html>
