--- a/user/templates/shipmenttracker.html
+++ b/user/templates/shipmenttracker.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{%load static%}
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -203,8 +203,10 @@
   </nav>
   <div class="container">
     <article class="card">
-      <header class="card-header">My Orders / Tracking <a href="#" class="btn btn-warning" data-abc="true"
-          style="float:right">Payment</a></header>
+      <header class="card-header">My Orders / Tracking  <form action="{%url 'paygate'%}">
+         <input type="hidden" name="Total" value={{total}}>
+         <button style="float: right;" type="submit">Payment</button>
+          </a></form></header>
       <div class="card-body">
         <h6></h6>
         <article class="card">
@@ -239,7 +241,7 @@
           </div>
         </div>
         <hr />
-        
+
         <!-- <a href="#" class="btn btn-warning" data-abc="true">
           <i class="fa fa-chevron-left"></i> Back to orders</a> -->
       </div>
